Move from primitive types in dto